--- a/Client/appsettings.json
+++ b/Client/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-FrontEnd_Auth-5a869bad-49c1-4224-ae4c-eeb7f02e907f;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=Talos ;Initial Catalog=AndersBrodDb-Authentication;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
