Refactor codebase, fix connectionstrings

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "AndersBrodDb": "Data Source=Capitan; Initial Catalog=AndersBrodDb; Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "AuthenticationDb": "Data Source=Capitan Initial Catalog=AuthenticationDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
+  "AllowedHosts": "*"
 }
