--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "AndersBrodDb": "Data Source=Talos; Initial Catalog=AndersBrodDb; Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb; Database=AndersBrodDb-Authentication;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "AndersBrodDb": "Data Source=Capitan; Initial Catalog=AndersBrodDb; Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "AuthenticationDb": "Data Source=Capitan Initial Catalog=AuthenticationDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "AllowedHosts": "*"
 }
