Convert from SQL Server to SQLite
- Replace SqlServer package with Sqlite in DataAccess.csproj
- Update ServiceExtensions to use UseSqlite for both contexts
- Update factory classes to use SQLite
- Simplify connection strings to use SQLite file paths
- Add SQLite database files to .gitignore
- Create initial migrations for both BrodDbContext and ApplicationDbContext
- Fix authentication connection string error message

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "AndersBrodDb": "Data Source=Capitan; Initial Catalog=AndersBrodDb; Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    "AuthenticationDb": "Data Source=Capitan Initial Catalog=AuthenticationDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "AndersBrodDb": "Data Source=andersbrod.db",
+    "AuthenticationDb": "Data Source=authentication.db"
   },
   "AllowedHosts": "*"
 }
