--- a/Client/appsettings.Development.json
+++ b/Client/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AuthenticationDb": "Data Source=authentication.db"
   }
 }
+
